src/objects/BatchDeleteCaseMes__mdt.object
<CustomObject>
    <fields>
        <fullName>CAS_SEL_origen_web__c</fullName>
        <label>CAS_SEL_origen_web</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumMeses__c</fullName>
        <label>NumMeses</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BatchDeleteCaseMes</label>
    <pluralLabel>BatchDeleteCaseMeses</pluralLabel>
</CustomObject>